<resources>
    <string name="app_name">Group Application</string>
    <string name="strHello">Poznaj nas</string>
    <string name="strNext">Dalej</string>
    <string name="strInspired">Zainspiruj się</string>
    <string name="strIdea">Get Inspired</string>
    <string name="strPlay">Zagraj</string>
    <string name="strMenuHello">Cześć, \n co sprawdzimy najpierw?</string>
    <string name="strHome">Strona główna</string>
    <string name="title_activity_game2">Game2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>