<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item android:icon="@drawable/ic_home"
        android:title="@string/strHome"
        android:id="@+id/home"
        app:showAsAction="withText"
        ></item>


    <item android:icon="@drawable/ic_team"
        android:title="@string/strHello"
        android:id="@+id/team"
        app:showAsAction="withText"

        ></item>


    <item android:icon="@drawable/ic_idea"
        android:title="@string/strInspired"
        android:id="@+id/idea"
        app:showAsAction="withText"
        ></item>


    <item android:icon="@drawable/ic_play"
        android:title="@string/strPlay"
        android:id="@+id/play"
        app:showAsAction="withText"
        android:onClick="runGame"

        ></item>


</menu>